--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="navbar bg-base-100">
             <div class="flex-1">
-                <a class="btn btn-ghost normal-case text-xl">Company Name</a>
+                <a class="btn btn-ghost normal-case text-xl">Quantum Tech</a>
             </div>
             <div class="flex-none">
                 <ul class="menu menu-horizontal px-1" style="padding-right:50px;">
@@ -25,7 +25,7 @@
                                 Bappy
                             </summary>
                             <ul class="p-2 bg-base-100">
-                                <li><a>SRS</a></li>
+                                <li><a href="https://docs.google.com/document/d/11p79cCgR1hLUzCfdaBp0QVmtR7xPlD6b/edit?usp=sharing&ouid=104593746959853275849&rtpof=true&sd=true" target="_blank">SRS</a></li>
                                 <li><a href="Assignment/Bappy/A1.html" target="_blank">Assignment</a></li>
                                 <li><a href="https://mdbappyportfolioondrvtw.on.drv.tw/www.bappy.portfolio/" target="_blank">portfolio</a></li>
                             </ul>
@@ -37,7 +37,7 @@
                                 Auntu
                             </summary>
                             <ul class="p-2 bg-base-100">
-                                <li><a>SRS</a></li>
+                                <li><a href="https://docs.google.com/document/d/1azlxoPQk9NXNjeuWtBxbn7POtcO0bkpC/edit?usp=sharing&ouid=104593746959853275849&rtpof=true&sd=true" target="_blank">SRS</a></li>
                                 <li><a href="Assignment/Auntu/A2.html" target="_blank">Assignment</a></li>
                                 <li><a href="https://650c1f07559407143402f797--cute-cupcake-c6d666.netlify.app/#aboutme" target="_blank">portfolio</a></li>
                             </ul>
