update some area

--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<header style="width: 100%; background-color: #000000; color: white;">
+<header style="background-color: #000000; color: white;">
     <!-- navber -->
     <nav>
         <div class="navbar bg-base-100">
@@ -72,9 +72,9 @@
         </div>
     </nav>
     <!-- banner -->
-    <div style="background-image: url('img/Bg1.jpg'); background-repeat: no-repeat; background-size: cover;">
-        <div class="hero min-h-screen">
-            <div class="hero-content flex-col lg:flex-row-reverse">
+    <div style="background-image: url('img/Bg1.jpg'); background-repeat: no-repeat; background-size:cover;; width:100%">
+        <div class="hero min-h-screen ">
+            <div class="hero-content flex-col lg:flex-row-reverse text-center">
                 <h1 class="text-xl font-bold text-white"><span class="bg-[] rounded-md">Welcome</span> To <br>
                     <span class="text-5xl font font-extrabold">our creative Team</span></h1>
             </div>
@@ -84,22 +84,22 @@
 <!-- about Bappy section -->
 <section>
 
-    <div class="hero min-h-screen bg-[#181501]">
+    <div class="hero min-h-screen " style="background-image: url('img/BgSec1.jpg');">
         <div class="hero-content flex-col lg:flex-row">
             <img src="img/img1.jpg" alt="Round Picture" class="max-w-sm rounded-lg shadow-2xl"
-                 style="margin-right:50px;border-radius: 50%; width: 1806px !important; height: 355px!important; overflow: hidden; width: 100%; height: 100%; object-fit: cover;"/>
+                 style="margin-right:50px;border-radius: 50%; width: 2200px !important; height: 350px!important; overflow: hidden; width: 100%; height: 100%; object-fit: cover;"/>
             <div class="space-y-5">
-                <h1 class="text-5xl font-bold text-white">About <span
-                        class="text-[#FF5733]">Bappy</span></h1>
-                <h2 class="text-3xl font-bold text-white">Creative Developer</h2>
-                <p class="py-6 text-white">As an accomplished developer, skilled in Java, Android, and Flutter,
+                <h1 class="text-5xl font-bold text-white"> About Bappy</h1>
+                <h1 class="text-3xl font-bold text-white"><i>Software Developer</i></h1>
+                <p class="py-6 text-white" style="  font-size: large;font-family: monospace;">
+                    As an accomplished developer, skilled in Java, Android, and Flutter,
                     I thrive on creating innovative and user-friendly applications. With a passion for coding
                     and problem-solving, my expertise lies in crafting efficient and elegant software solutions.
                     From building dynamic Android apps to crafting cross-platform Flutter experiences, I embrace
                     the challenges of the ever-evolving tech landscape. Dedicated to delivering top-notch products,
                     I constantly seek to expand my knowledge and stay ahead of the curve. My commitment to excellence
                     drives me to create impactful software that enhances user experiences and brings ideas to life.</p>
-                <button class="btn bg-[#FF5733] text-white">More About</button>
+                <button class="btn bg-[#FF5733] text-white"><a href="https://mdbappyportfolioondrvtw.on.drv.tw/www.bappy.portfolio/" target="_blank">More About</a></button>
 
             </div>
         </div>
@@ -108,16 +108,16 @@
 <!-- about Auntu section -->
 <section>
 
-    <div class="hero min-h-screen bg-[#181510]">
+    <div class="hero min-h-screen " style="background-image: url('img/BgSec2.jpg');">
         <div class="hero-content flex-col lg:flex-row">
             <img src="img/img2.jpg" alt="Round Picture" class="max-w-sm rounded-lg shadow-2xl"
-                 style="margin-right:50px;border-radius: 50%; width: 1806px !important; height: 355px!important; overflow: hidden; width: 100%; height: 100%; object-fit: cover;"/>
+                 style="margin-right:50px;border-radius: 50%; width: 2200px !important; height: 355px!important; overflow: hidden; width: 100%; height: 100%; object-fit: cover;"/>
             <div class="space-y-5">
                 <h1 class="text-5xl font-bold text-white">About <span
                         class="text-[#FF5733]">Auntu</span></h1>
                 <h2 class="text-3xl font-bold text-white">write somethings</h2>
                 <p class="py-6 text-white">Write some about</p>
-                <button class="btn bg-[#FF5733] text-white">More About</button>
+                <button class="btn bg-[#FF5733] text-white"><a href="https://650c1f07559407143402f797--cute-cupcake-c6d666.netlify.app/#aboutme" target="_blank">More About</a></button>
 
             </div>
         </div>
@@ -126,7 +126,7 @@
 <!-- about Akash section -->
 <section>
 
-    <div class="hero min-h-screen bg-[#181501]">
+    <div class="hero min-h-screen "  style="background-image: url('img/BgSec3.jpg');" >
         <div class="hero-content flex-col lg:flex-row">
             <img src="img/img3.jpg" alt="Round Picture" class="max-w-sm rounded-lg shadow-2xl"
                  style="margin-right:50px;border-radius: 50%; width: 1806px !important; height: 355px!important; overflow: hidden; width: 100%; height: 100%; object-fit: cover;"/>
@@ -135,7 +135,7 @@
                         class="text-[#FF5733]">Akash</span></h1>
                 <h2 class="text-3xl font-bold text-white">Write some about</h2>
                 <p class="py-6 text-white">write somethings</p>
-                <button class="btn bg-[#FF5733] text-white">More About</button>
+                <button class="btn bg-[#FF5733] text-white"><a href="https://650c365f7c6aa72401d22478--euphonious-klepon-15e810.netlify.app/" target="_blank">More About</a></button>
 
             </div>
         </div>
@@ -144,7 +144,7 @@
 <!-- about Raihan section -->
 <section>
 
-    <div class="hero min-h-screen bg-[#181511]">
+    <div class="hero min-h-screen "  style="background-image: url('img/BgSec4.jpg');">
         <div class="hero-content flex-col lg:flex-row">
             <img src="img/img4.jpg" alt="Round Picture" class="max-w-sm rounded-lg shadow-2xl"
                  style="margin-right:50px;border-radius: 50%; width: 1806px !important; height: 355px!important; overflow: hidden; width: 100%; height: 100%; object-fit: cover;"/>
@@ -153,7 +153,7 @@
                         class="text-[#FF5733]">Raihan</span></h1>
                 <h2 class="text-3xl font-bold text-white">Write somethings</h2>
                 <p class="py-6 text-white">write some about </p>
-                <button class="btn bg-[#FF5733] text-white">More About</button>
+                <button class="btn bg-[#FF5733] text-white"><a href="https://raihan4827.github.io/my-first-repo/" target="_blank">More About</a></button>
 
             </div>
         </div>
