--- a/Assignment/Akash/A3.html
+++ b/Assignment/Akash/A3.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
           integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <script src="../../js/test.js"></script>
+    <script src="../../js/A3.js"></script>
 </head>
 <body>
 <header style="width: 100%; background-color: #000000; color: white;">
@@ -25,7 +27,6 @@
     <!-- banner -->
     <div style="background-image: url('../../img/A_bg.jpg'); background-repeat: no-repeat; background-size: cover;height:800px;">
         <div class="form-control w-full max-w-xs" style="margin:auto;padding:400px 0px 0px 0px">
-
             <select id="selectAssignment" class="select select-bordered" style="background:#90949e">
                 <option disabled selected>Pick one</option>
                 <option value="assignment1">Assignment-1</option>
@@ -36,38 +37,6 @@
             </select>
         </div>
     </div>
-    <script>
-        const selectAssignment = document.getElementById('selectAssignment');
-
-        selectAssignment.addEventListener('change', function () {
-            const selectedOption = selectAssignment.options[selectAssignment.selectedIndex].value;
-
-            // Perform redirection based on the selected option
-            switch (selectedOption) {
-                case 'assignment1':
-                    window.location.href = 'https://docs.google.com/document/d/1FvSbGbv1fobsfYiwL_8PVxxyUtTYriuW/edit?usp=sharing&ouid=104593746959853275849&rtpof=true&sd=true';
-                    break;
-                case 'assignment2':
-                    window.location.href = '#';
-                    break;
-                case 'assignment3':
-                    window.location.href = '#';
-                    break;
-                case 'assignment4':
-                    window.location.href = '#';
-                    break;
-                case 'assignment5':
-                    window.location.href = '#';
-                    break;
-                default:
-                    // Handle the default case or show an error message
-                    alert('Please select an assignment.');
-            }
-        });
-
-    </script>
-
 </header>
-
 </body>
 </html>
