--- a/test.html
+++ b/test.html
@@ -20,54 +20,47 @@
             </div>
             <div class="flex-none">
                 <ul class="menu menu-horizontal px-1" style="padding-right:50px;">
-                    <li>
-                        <details>
-                            <summary style="padding-right:50px">
-                                Bappy
-                            </summary>
-                            <ul class="p-2 bg-base-100">
-                                <li><a href="https://docs.google.com/document/d/11p79cCgR1hLUzCfdaBp0QVmtR7xPlD6b/edit?usp=sharing&ouid=104593746959853275849&rtpof=true&sd=true" target="_blank">SRS</a></li>
-                                <li><a href="Assignment/Bappy/A1.html" target="_blank">Assignment</a></li>
-                                <li><a href="https://mdbappyportfolioondrvtw.on.drv.tw/www.bappy.portfolio/" target="_blank">portfolio</a></li>
-                            </ul>
-                        </details>
-                    </li>
-                    <li>
-                        <details>
-                            <summary style="padding-right:50px">
-                                Auntu
-                            </summary>
-                            <ul class="p-2 bg-base-100">
-                                <li><a href="https://docs.google.com/document/d/1azlxoPQk9NXNjeuWtBxbn7POtcO0bkpC/edit?usp=sharing&ouid=104593746959853275849&rtpof=true&sd=true" target="_blank">SRS</a></li>
-                                <li><a href="Assignment/Auntu/A2.html" target="_blank">Assignment</a></li>
-                                <li><a href="https://650c1f07559407143402f797--cute-cupcake-c6d666.netlify.app/#aboutme" target="_blank">portfolio</a></li>
-                            </ul>
-                        </details>
-                    </li>
-                    <li>
-                        <details>
-                            <summary style="padding-right:50px">
-                                Akash
-                            </summary>
-                            <ul class="p-2 bg-base-100">
-                                <li><a>SRS</a></li>
-                                <li><a href="Assignment/Akash/A3.html" target="_blank">Assignment</a></li>
-                                <li><a href="https://650c365f7c6aa72401d22478--euphonious-klepon-15e810.netlify.app/" target="_blank">portfolio</a></li>
-                            </ul>
-                        </details>
-                    </li>
-                    <li>
-                        <details>
-                            <summary style="padding-right:50px">
-                                Raihan
-                            </summary>
-                            <ul class="p-2 bg-base-100">
-                                <li><a>SRS</a></li>
-                                <li><a href="Assignment/Raihan/A4.html" target="_blank">Assignment</a></li>
-                                <li><a href="https://raihan4827.github.io/my-first-repo/" target="_blank">portfolio</a></li>
-                            </ul>
-                        </details>
-                    </li>
+                    <div class="dropdown dropdown-hover" style="padding-right:30px">
+                        <label tabindex="0" class="btn m-1" style="background-color: #205a67;">Bappy</label>
+                        <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+                            <li> <a href="https://docs.google.com/document/d/16M-rZ70e-dNNbhPGLWttAm-2IDfbLZqw/edit?usp=sharing&ouid=104593746959853275849&rtpof=true&sd=true"
+                                   target="_blank">SRS</a></li>
+                            <li><a href="Assignment/Bappy/A1.html" target="_blank">Assignment</a></li>
+                            <li><a href="https://mdbappyportfolioondrvtw.on.drv.tw/www.bappy.portfolio/"
+                                   target="_blank">portfolio</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="dropdown dropdown-hover" style="padding-right:30px">
+                        <label tabindex="0" class="btn m-1" style="background-color: #205a67;">Auntu</label>
+                        <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+                            <li><a href="https://docs.google.com/document/d/1azlxoPQk9NXNjeuWtBxbn7POtcO0bkpC/edit?usp=sharing&ouid=104593746959853275849&rtpof=true&sd=true"
+                               target="_blank">SRS</a></li>
+                            <li><a href="Assignment/Auntu/A2.html" target="_blank">Assignment</a></li>
+                            <li><a href="https://650c1f07559407143402f797--cute-cupcake-c6d666.netlify.app/#aboutme"
+                                   target="_blank">portfolio</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="dropdown dropdown-hover" style="padding-right:30px">
+                        <label tabindex="0" class="btn m-1" style="background-color: #205a67;">Akash</label>
+                        <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+                            <li><a href="https://docs.google.com/document/d/1FvSbGbv1fobsfYiwL_8PVxxyUtTYriuW/edit?usp=sharing&ouid=104593746959853275849&rtpof=true&sd=true" target="_blank">SRS</a></li>
+                            <li><a href="Assignment/Akash/A3.html" target="_blank">Assignment</a></li>
+                            <li><a href="https://650c365f7c6aa72401d22478--euphonious-klepon-15e810.netlify.app/"
+                                   target="_blank">portfolio</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="dropdown dropdown-hover" style="padding-right:30px">
+                        <label tabindex="0" class="btn m-1" style="background-color: #205a67;">Raihan</label>
+                        <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+                            <li><a href="https://docs.google.com/document/d/14Ryrrox29eecrTcagDGh65z2bBMDXTa5/edit?usp=sharing&ouid=104593746959853275849&rtpof=true&sd=true" target="_blank">SRS</a></li>
+                            <li><a href="Assignment/Raihan/A4.html" target="_blank">Assignment</a></li>
+                            <li><a href="https://raihan4827.github.io/my-first-repo/" target="_blank">portfolio</a>
+                            </li>
+                        </ul>
+                    </div>
                 </ul>
             </div>
         </div>
@@ -100,7 +93,8 @@
                     the challenges of the ever-evolving tech landscape. Dedicated to delivering top-notch products,
                     I constantly seek to expand my knowledge and stay ahead of the curve. My commitment to excellence
                     drives me to create impactful software that enhances user experiences and brings ideas to life.</p>
-                <button class="btn bg-[#FF5733] text-white"><a href="https://mdbappyportfolioondrvtw.on.drv.tw/www.bappy.portfolio/" target="_blank">More About</a></button>
+                <button class="btn text-white"><a href="https://mdbappyportfolioondrvtw.on.drv.tw/www.bappy.portfolio/"
+                                                  target="_blank">More About</a></button>
 
             </div>
         </div>
@@ -112,13 +106,20 @@
     <div class="hero min-h-screen " style="background-image: url('img/BgSec2.jpg');">
         <div class="hero-content flex-col lg:flex-row">
             <img src="img/img2.jpg" alt="Round Picture" class="max-w-sm rounded-lg shadow-2xl"
-                 style="margin-right:50px;border-radius: 50%; width: 2200px !important; height: 355px!important; overflow: hidden; width: 100%; height: 100%; object-fit: cover;"/>
+                 style="margin-right:50px;border-radius: 50%; width: 2200px !important; height: 385px!important; overflow: hidden; width: 100%; height: 100%; object-fit: cover;"/>
             <div class="space-y-5">
-                <h1 class="text-5xl font-bold text-white">About <span
-                        class="text-[#FF5733]">Auntu</span></h1>
-                <h2 class="text-3xl font-bold text-white">write somethings</h2>
-                <p class="py-6 text-white">Write some about</p>
-                <button class="btn bg-[#FF5733] text-white"><a href="https://650c1f07559407143402f797--cute-cupcake-c6d666.netlify.app/#aboutme" target="_blank">More About</a></button>
+                <h1 class="text-5xl font-bold text-white">About Auntu</h1>
+                <h2 class="text-3xl font-bold text-white"><i>UI/UX Designer</i></h2>
+                <p class="py-6 text-white">, I'm a creative visionary dedicated to crafting exceptional digital
+                    experiences. With a passion for user-centric design, I specialize in creating interfaces that are
+                    not only visually stunning but also intuitive and engaging. My expertise lies in understanding user
+                    behavior and translating it into meaningful design solutions. I have a keen eye for aesthetics, a
+                    deep understanding of usability principles, and a commitment to delivering seamless interactions.
+                    I'm always seeking to push the boundaries of design innovation, ensuring that every product I touch
+                    leaves a lasting impression and enhances the user's journey.</p>
+                <button class="btn text-white"><a
+                        href="https://650c1f07559407143402f797--cute-cupcake-c6d666.netlify.app/#aboutme"
+                        target="_blank">More About</a></button>
 
             </div>
         </div>
@@ -127,16 +128,24 @@
 <!-- about Akash section -->
 <section>
 
-    <div class="hero min-h-screen "  style="background-image: url('img/BgSec3.jpg');" >
+    <div class="hero min-h-screen " style="background-image: url('img/BgSec3.jpg');">
         <div class="hero-content flex-col lg:flex-row">
             <img src="img/img3.jpg" alt="Round Picture" class="max-w-sm rounded-lg shadow-2xl"
-                 style="margin-right:50px;border-radius: 50%; width: 1806px !important; height: 355px!important; overflow: hidden; width: 100%; height: 100%; object-fit: cover;"/>
+                 style="margin-right:50px;border-radius: 50%; width: 2200px !important; height: 385px!important; overflow: hidden; width: 100%; height: 100%; object-fit: cover;"/>
             <div class="space-y-5">
-                <h1 class="text-5xl font-bold text-white">About <span
-                        class="text-[#FF5733]">Akash</span></h1>
-                <h2 class="text-3xl font-bold text-white">Write some about</h2>
-                <p class="py-6 text-white">write somethings</p>
-                <button class="btn bg-[#FF5733] text-white"><a href="https://650c365f7c6aa72401d22478--euphonious-klepon-15e810.netlify.app/" target="_blank">More About</a></button>
+                <h1 class="text-5xl font-bold text-white">About Akash</h1>
+                <h2 class="text-3xl font-bold text-white"><i>Full-Stack Devoloper</i></h2>
+
+                <p class="py-6 text-white">I'm a versatile problem solver who bridges the gap between front-end and
+                    back-end technologies. With a passion for crafting seamless user experiences and a knack for
+                    building robust server-side systems, I thrive in the dynamic world of web development. My skills
+                    range from designing visually engaging interfaces to architecting efficient databases and server
+                    logic. I'm a lifelong learner, constantly adapting to new technologies and staying at the forefront
+                    of industry trends. I'm dedicated to creating comprehensive web solutions that combine aesthetics
+                    with functionality, making the digital world more accessible and user-friendly.</p>
+                <button class="btn text-white"><a
+                        href="https://650c365f7c6aa72401d22478--euphonious-klepon-15e810.netlify.app/" target="_blank">More
+                    About</a></button>
 
             </div>
         </div>
@@ -145,23 +154,28 @@
 <!-- about Raihan section -->
 <section>
 
-    <div class="hero min-h-screen "  style="background-image: url('img/BgSec4.jpg');">
+    <div class="hero min-h-screen " style="background-image: url('img/BgSec4.jpg');">
         <div class="hero-content flex-col lg:flex-row">
             <img src="img/img4.jpg" alt="Round Picture" class="max-w-sm rounded-lg shadow-2xl"
-                 style="margin-right:50px;border-radius: 50%; width: 1806px !important; height: 355px!important; overflow: hidden; width: 100%; height: 100%; object-fit: cover;"/>
+                 style="margin-right:50px;border-radius: 50%; width: 2200px !important; height: 385px!important; overflow: hidden; width: 100%; height: 100%; object-fit: cover;"/>
             <div class="space-y-5">
-                <h1 class="text-5xl font-bold text-white">About <span
-                        class="text-[#FF5733]">Raihan</span></h1>
-                <h2 class="text-3xl font-bold text-white">Write somethings</h2>
-                <p class="py-6 text-white">write some about </p>
-                <button class="btn bg-[#FF5733] text-white"><a href="https://raihan4827.github.io/my-first-repo/" target="_blank">More About</a></button>
+                <h1 class="text-5xl font-bold text-white">About Raihan</h1>
+                <h2 class="text-3xl font-bold text-white"><i>Front-End Developer</i></h2>
+                <p class="py-6 text-white">I'm an aspiring front-end developer with a keen eye for detail and a knack
+                    for problem-solving. My journey into the world of web development is driven by a deep love for
+                    technology and a commitment to continuous learning. I thrive on collaborating with others to turn
+                    ideas into beautifully crafted, user-centric interfaces. With a creative mindset and a persistent
+                    nature, I'm dedicated to staying adaptable in the ever-evolving tech landscape, ensuring that I can
+                    bring innovative solutions to the forefront of web development.</p>
+                <button class="btn text-white"><a href="https://raihan4827.github.io/my-first-repo/" target="_blank">More
+                    About</a></button>
 
             </div>
         </div>
     </div>
 </section>
 
-<footer  class="footer footer-center p-10 bg-[#000000] text-white text-base-content rounded ">
+<footer class="footer footer-center p-10 bg-[#000000] text-white text-base-content rounded ">
     <div class="grid grid-flow-col gap-4">
         <a class="link link-hover">About us</a>
         <a class="link link-hover">Contact</a>
@@ -169,9 +183,10 @@
     </div>
     <div>
         <div class="grid grid-flow-col gap-4">
-            <a href="https://www.facebook.com/mdsohanurrahman.bappy.9?mibextid=ZbWKwL" target="_blank"> <i class="fab fa-facebook fa-2x"></i></a>
+            <a href="https://www.facebook.com/mdsohanurrahman.bappy.9?mibextid=ZbWKwL" target="_blank"> <i
+                    class="fab fa-facebook fa-2x"></i></a>
 
-            <a href="https://t.me/mdbappy21" target="_blank">  <i class="fa-brands fa-telegram fa-2x"></i> </a>
+            <a href="https://t.me/mdbappy21" target="_blank"> <i class="fa-brands fa-telegram fa-2x"></i> </a>
 
             <a href="https://wa.link/c79zkw" target="_blank"> <i class="fa-brands fa-whatsapp fa-2x"></i></a>
 
@@ -179,7 +194,7 @@
         </div>
     </div>
     <div>
-        <p>Copyright © 2023 - All right reserved by Md Bappy</p>
+        <p>Copyright © 2023 - All right reserved by Quantum Tech</p>
     </div>
 </footer>
 
