Update on assignment-2

--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Project-2</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.0/dist/full.css" rel="stylesheet" type="text/css"/>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -19,7 +20,7 @@
                 <a class="btn btn-ghost normal-case text-xl">Quantum Tech</a>
             </div>
             <div class="flex-none">
-                <ul class="menu menu-horizontal px-1" style="padding-right:50px;">
+                <div class="menu menu-horizontal px-1" style="padding-right:50px;">
                     <div class="dropdown dropdown-hover" style="padding-right:30px">
                         <label tabindex="0" class="btn m-1" style="background-color: #205a67;">Bappy</label>
                         <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
@@ -61,7 +62,7 @@
                             </li>
                         </ul>
                     </div>
-                </ul>
+                </div>
             </div>
         </div>
     </nav>
